[project]
name = "scicomp-p2-dhvan-asteroids"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.41",
    "matplotlib>=3.10.8",
    "optuna>=4.7.0",
    "pandas>=3.0.1",
    "plotly>=6.6.0",
    "scikit-learn>=1.8.0",
    "tqdm>=4.67.3",
]
